# EmergencyServicesRouting

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/: UnitTests.save
src/: App.cpp  App.h  MainFrame.cpp  MainFrame.h  users.csv
src/Data Structures/: Graph.cpp  Graph.h  Utils.h
src/Data Structures/Graph/: Graph.cpp  Graph.h  Node.h
src/Data Structures/Priority Queue/: Queue.h
src/Server/: Database.cpp  Database.h  Utils.h
src/Types/: CallHandler.h  EmergencyResponder.h  HospitalAdmin.cpp  User.cpp  User.h
src/Types/Nodes/: Ambulance.h  Emergency.h  Hospital.h
src/Types/User/: CallHandler.cpp  CallHandler.h  EmergencyResponder.cpp  EmergencyResponder.h  HospitalAdmin.cpp  HospitalAdmin.h  User.cpp  User.h
src/UI/: LoginDialog.cpp  LoginDialog.h
src/UI/Dialogs/: AmbulanceSelectDialog.cpp  AmbulanceSelectDialog.h  EmergencyDialog.cpp  EmergencyDialog.h  HospitalSelectDialog.cpp  HospitalSelectDialog.h  LoginDialog.cpp  LoginDialog.h
src/UI/Elements/: Map.cpp  Map.h  UserInput.cpp  UserInput.h
src/UI/Panels/: CallHandlerPanel.cpp  CustomPanels.h  EmergencyResponderPanel.cpp  HospitalAdminPanel.cpp
